# NAMLProject

./: README.md  experiments.py  project.ipynb  pyproject.toml  requirements.txt
data/: BTC_EUR-12h.csv  BTC_EUR-15m.csv  BTC_EUR-1d.csv  BTC_EUR-1h.csv  BTC_EUR-6h.csv
data/hypertuning/: shift_results.csv  window_results.csv  window_results_lstm.csv
functions/: experiments.py  preprocess_data.py  train_test_models.py
models/model0/: keras_metadata.pb  saved_model.pb
models/model0/variables/: variables.index
models/model1/: keras_metadata.pb
models/model1/variables/: variables.index
models/model2/: keras_metadata.pb  saved_model.pb
models/model2/variables/: variables.data-00000-of-00001  variables.index
models/sample_models/model_0/net0/: keras_metadata.pb  saved_model.pb
models/sample_models/model_0/net0/variables/: variables.data-00000-of-00001  variables.index
models/sample_models/model_0/net1/: keras_metadata.pb  saved_model.pb
models/sample_models/model_0/net1/variables/: variables.data-00000-of-00001  variables.index
models/sample_models/model_0/net2/: keras_metadata.pb  saved_model.pb
models/sample_models/model_0/net2/variables/: variables.data-00000-of-00001  variables.index
namlproject/data/: BTC_EUR-15m.csv  BTC_EUR-1h.csv
namlproject/functions/: preprocess_data.py
namlproject/models/model1/: saved_model.pb
namlproject/outputs/: experiment-v1.2.txt
namlproject/papers/: README.md
notebook/: project.ipynb  requirements(tested-version).txt  requirements.txt
outputs/: experiment-v1.0.txt  experiment-v1.1.txt
