[tool.poetry]
name = "NAMLProject"
version = "0.1.0"
description = ""
authors = ["Filippo Manzardo <filippommanzardo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8, <3.10"
numpy = "^1.22.1"
pandas = "^1.4.0"
sklearn = "^0.0"
tensorflow = "^2.7.0"
pandas-ta = "^0.3.14-beta.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
